<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/fragment_chart">
    <include
        layout="@layout/layout_title_bar"
        android:background="@color/head_title" />

    <TextView
        android:id="@+id/tv_uraian"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_uraian"
        android:text="@string/uraian" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_container"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/head_title"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_botton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBackPressedChart"
            android:text="@string/backbotton" />

        <Button android:id="@+id/detil_botton"
            android:text="@string/detil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDetailHSDialog"/>


    </LinearLayout>

</LinearLayout>
